test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/non_void_return.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  void
  identifier(x)
  (
  void
  )
  {
  return
  const int(1)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  identifier(x)
  (
  )
  ;
  return
  const int(0)
  ;
  }
